# kv-hashmap-continual-learning

./: .gitignore  MASTER_GUIDELINES.md  README.md
github/: README.md
llama_cpp_patches/: README.md  qwen2.cpp  src_CMakeLists.txt
research/: 01_slot_llm_fusion.md  02_hashmap_layer_blk0.md  03_three_experiments.md  04_v_learning.md  05_v_optimization.md  INDEX.md
slot_fusion/: CMakeLists.txt  slot_fusion.cpp
slot_plugin/: CMakeLists.txt  kv_hashmap.c  kv_hashmap.h  slot.c  slot.h
tools/: build_blk1_stack.py  build_kv_hashmap.py  build_kv_stack.py  capture_blk1_forward.py  continual_learning_demo.py  dump_weights.py  knowledge_injection.py  v_learning.py
